RESOLVED FIXED105453
WTF String from ASCIILiteral fails to correctly handle empty strings.
https://bugs.webkit.org/show_bug.cgi?id=105453
Summary WTF String from ASCIILiteral fails to correctly handle empty strings.
Oliver Hunt
Reported 2012-12-19 12:03:09 PST
WTF String from ASCIILiteral fails to correctly handle empty strings.
Attachments
Patch (1.45 KB, patch)
2012-12-19 12:04 PST, Oliver Hunt
andersca: review+
Oliver Hunt
Comment 1 2012-12-19 12:04:03 PST
Oliver Hunt
Comment 2 2012-12-19 12:18:25 PST
Oliver Hunt
Comment 3 2012-12-19 12:19:40 PST
Note You need to log in before you can comment on or make changes to this bug.