WTF String from ASCIILiteral fails to correctly handle empty strings. https://bugs.webkit.org/show_bug.cgi?id=105453

Reviewed by Anders Carlsson.

When we have an zero length literal we should return the empty StringImpl.

* wtf/text/StringImpl.cpp:
(WTF::StringImpl::createFromLiteral):

Canonical link: https://commits.webkit.org/123686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138187 268f45cc-cd09-0410-ab3c-d52691b4dbfc